--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,8 @@
 /* IMPORT GOOGLE FONT */
-@import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@200;300;400;500;600;700;900&family=Reggae+One&display=swap');
 
-
+/*font-family: 'Noto Serif JP', serif;
+font-family: 'Reggae One', cursive;*/
 *{
-    margin: 0;
-    padding: 0;
-    font-family: 'League Spartan', sans-serif;
+    font-family: 'Reggae One', cursive;
 }
