--- a/src/components/styles/AppNavbar.css
+++ b/src/components/styles/AppNavbar.css
@@ -2,8 +2,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@200;300;400;500;600;700;900&family=Reggae+One&display=swap');
 
 .navbar-main {
-	position: sticky;
 	background-color: white;
+}
+
+.navbar-submain {
+
 }
 
 .brand-title {
@@ -15,8 +18,8 @@
 }
 
 .nav-link:hover {
-	border-bottom: 3px solid #fb352a;
+	border-bottom: 3px solid #fb352a !important;
 }
 .nav-link:active {
-	border-bottom: 3px solid #fb352a;
+	border-bottom: 3px solid #fb352a !important;
 }
