--- a/src/components/styles/ProductCard.css
+++ b/src/components/styles/ProductCard.css
@@ -1,10 +1,42 @@
 /* IMPORT GOOGLE FONT */
 @import url('https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@200;300;400;500;600;700;900&family=Reggae+One&display=swap');
 
-.product-button {
-	background-color: #f43630 !important;
+
+.main-products-page-cards {
+	min-height: 100%;
+}
+
+.product-card-buttons {
+	border-radius: 15px !important;
+	font-size: 0.7rem !important;
+	letter-spacing: 1px !important;
+	padding-top: 5px !important;
+	padding-bottom: 5px !important;
+	padding-left: 10px !important;
+	padding-right: 10px !important;
+	background-color: #fb352a !important;
 	border: none !important;
-	border-radius: 20px !important;
+}
+
+.product-card-buttons-order-now {
+	background-color: #f96c62 !important;
+}
+
+.product-card-title {
+	font-size: 1.5rem !important;
+	font-weight: 900 !important;
+	border-bottom: 2px solid #fb352a !important;
+}
+
+.product-card-subtitle {
+	font-size: 0.7rem !important;
+	font-weight: 700 !important;
+	letter-spacing: 1px !important;
+	color: #fb352a !important;
+}
+
+.product-card-text {
 	font-size: 0.8rem !important;
+	font-weight: 500 !important;
 	letter-spacing: 1px !important;
 }
